# mws

./: .gitignore  .replit  .vercelignore  GG.txt  app.py  pyproject.toml  replit.md  requirements.txt  run_bot.py  telegram_bot.py  temp  vercel.json
api/: __init__.py  blockchain.py  email_service.py  index.py  models.py  requirements.txt
static/: script.js  style.css
templates/: index.html  landing.html  login.html  request_token.html
