[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "web3>=7.13.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "python-telegram-bot[all]==22.3",
    "telegram>=0.0.1",
    "sendgrid>=6.12.4",
]
